# TTServer

./: .gitignore  README.md
run/: daeml  restart.sh
run/msfs/: msfs
src/: build.sh  install_packages.sh  make_hiredis.sh  make_log4cxx.sh  make_protobuf.sh  tables.sql
src/base/: CMakeLists.txt  EncDec.h  Makefile  util.cpp
src/base/.clangd/index/: Base64.h.85231432A11B3097.idx  Condition.h.2791F4C2ED94A5CC.idx  ConfigFileReader.h.E6D9F5753F407A02.idx  EncDec.h.862FCEA80794BA81.idx  HttpClient.h.047BDD259D19E495.idx  HttpParserWrapper.h.FA580A75385A188B.idx  IM.BaseDefine.pb.h.EE4261E628987DBB.idx  IM.Buddy.pb.h.5E934EAAD8F48941.idx  IM.File.pb.h.FB0E40C62F0923C0.idx  IM.Group.pb.h.42DB9E5F6C4EB64B.idx  IM.Login.pb.h.BA645C69C26FC9C7.idx  IM.Message.pb.h.301FF764B001DB47.idx  IM.Other.pb.h.6E0BDF8ADCA37D24.idx  IM.Server.pb.h.676759DCD9CDC438.idx  IM.SwitchService.pb.h.8ABCD498B756EC16.idx  ImPduBase.h.3E3D5CE30D867F11.idx  Lock.h.2EFCD73F1966D8E5.idx  ServInfo.h.5D357940C1699758.idx  Task.h.C4CBC30736852591.idx  Thread.h.FFC85F08F44F0963.idx  ThreadPool.h.187A7146485237BF.idx  TokenValidator.h.534EE5BC738AEBB8.idx  UtilPdu.h.B6D3916F7B6E49B4.idx  atomic.h.3219978E73C531CC.idx  atomicops.h.32807B5AD419C32A.idx  atomicops_internals_x86_gcc.h.6754BCA5ECFE04A2.idx  autolink.h.FBDDAAD7889EC5F8.idx  common.h.587228545AA51997.idx  config.h.5834772CC1783392.idx  extension_set.h.B00F47AEE0C46349.idx  features.h.083B1B049D900B46.idx  forwards.h.450B1FA95E89BF5D.idx  generated_message_util.h.27D5BD3680527900.idx  http_parser.h.DA5FD06E7EA4136D.idx  imconn.h.ECD105C16A2FD88E.idx  json.h.249C1F3D351911DE.idx  message_lite.h.E0A2C5A5E111B974.idx  netlib.h.AB1E49ADE7E2342E.idx  once.h.A50B233CBB7FF847.idx  ostype.h.9B2E3C91FB4814E9.idx  (+10 more)
src/db_proxy_server/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  HandlerMap.cpp  Makefile  ProxyConn.cpp  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp
src/db_proxy_server/.cache/clangd/index/: AudioModel.cpp.31F53E81FB9AD1E8.idx  AudioModel.h.9F888E23A82BFB1E.idx  AutoPool.cpp.4F7DA864871F9FAB.idx  AutoPool.h.695A02806BE522E9.idx  CachePool.cpp.81C368155E55D1BD.idx  CachePool.h.C7EF411BF572D603.idx  Common.h.E1C29CD144C100C1.idx  DBPool.cpp.158BA17E3CF8E4F4.idx  DBPool.h.5FC69E080FAB9D42.idx  (+49 more)
src/db_proxy_server/.clangd/index/: AudioModel.cpp.F11B89C036C47133.idx  AudioModel.h.4B4A00C750BA26B4.idx  AutoPool.cpp.71A090B695D9188F.idx  AutoPool.h.2662A6B51D055874.idx  CachePool.cpp.FCBAAB27BC1AFAE9.idx  CachePool.h.02AFAC9F635B4461.idx  Common.h.65FCC442F6CA877D.idx  DBPool.cpp.281492640763B220.idx  DBPool.h.7DDEDD869E71661F.idx  DepartAction.cpp.B24E06896C858B19.idx  DepartAction.h.060399E70DC37097.idx  DepartModel.cpp.0BD78B6EBDD19DA2.idx  DepartModel.h.BC9F9D4E5205701B.idx  ExterLogin.cpp.C1F3835A0E4D5F42.idx  ExterLogin.h.293547D0E9619962.idx  FileAction.cpp.D07B7A68FA5D77C0.idx  FileAction.h.898A687A54064F78.idx  FileModel.cpp.88E71FE976B73491.idx  FileModel.h.DB6A96A926B8BDB9.idx  GroupAction.cpp.0F62D9E70F940CC2.idx  GroupAction.h.BEB9AD049FEF7FBF.idx  GroupMessageModel.cpp.7910E2DA0BE88086.idx  GroupMessageModel.h.F92D2B10BCAEFABC.idx  GroupModel.cpp.C952822A50E9F1EB.idx  GroupModel.h.8130C5D83021E0A7.idx  HandlerMap.cpp.104EE320E8AB5296.idx  HandlerMap.h.FB0D478EC5B13A2C.idx  InterLogin.cpp.E77FB8992B6C2172.idx  InterLogin.h.9EBD24906F905E95.idx  Login.cpp.0759D3E7415644E6.idx  Login.h.CC1069FF47552DDF.idx  LoginStrategy.h.407ABF0D42B540E2.idx  MessageContent.cpp.1D7AA69EB75DC8BE.idx  MessageContent.h.CE498D2F677363BF.idx  MessageCounter.cpp.F85FDCF983A9F08F.idx  MessageCounter.h.5B38E5F1C371290B.idx  MessageModel.cpp.D9BAB89CF8135D8A.idx  MessageModel.h.62E58AD4D4CBD78D.idx  ProxyConn.cpp.B16706CAE63BBA82.idx  ProxyConn.h.794E617D437161E8.idx  (+18 more)
src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  UserAction.cpp  UserAction.h
src/file_server/: CMakeLists.txt  Makefile
src/http_msg_server/: CMakeLists.txt
src/http_msg_server/.clangd/index/: AttachData.cpp.13D00B75B05F3FC0.idx  AttachData.h.C06CE7F9B85815F2.idx  DBServConn.cpp.76B31B54595CCC45.idx  DBServConn.h.E063582F1F3A4B12.idx  HttpConn.cpp.EAD9952A56075F7C.idx  HttpConn.h.19A1D7F38D6F33D1.idx  HttpPdu.cpp.6678BD34046E00E3.idx  HttpPdu.h.59A7908D1424AB44.idx  HttpQuery.cpp.BA6B0507ED0E104C.idx  HttpQuery.h.EE1D7033D5C4F1E3.idx  RouteServConn.cpp.BA578E411BE2AB62.idx  RouteServConn.h.DE8D83834FCCF7C3.idx  http_msg_server.cpp.8B919304F26E8AE1.idx
src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  ipparser.cpp  ipparser.h  login_server.cpp
src/msfs/: CMakeLists.txt  CriticalSection.h  FileLin.cpp  FileLin.h  FileManager.cpp  FileManager.h  HttpConn.cpp  HttpConn.h  main.cpp
src/msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileHandler.h  FileServConn.cpp  FileServConn.h  GroupChat.cpp  GroupChat.h  ImUser.cpp  ImUser.h  LoginServConn.cpp  LoginServConn.h  MsgConn.cpp  MsgConn.h  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  RouteServConn.h  msg_server.cpp
src/push_server/: CMakeLists.txt  Makefile
src/route_server/: CMakeLists.txt  Makefile  RouteConn.cpp  RouteConn.h  UserInfo.cpp  UserInfo.h  route_server.cpp
(+5 files in other folders)
