cmake_minimum_required(VERSION 2.6)
PROJECT(msfs)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/../bin)

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)

INCLUDE_DIRECTORIES(./ ${PROJECT_SOURCE_DIR}/../base)
LINK_DIRECTORIES(./ ${PROJECT_SOURCE_DIR}/../bin)

ADD_EXECUTABLE(msfs ${SRC_LIST})

TARGET_LINK_LIBRARIES(msfs pthread base)
