cmake_minimum_required(VERSION 2.6)
PROJECT(pushserver)

AUX_SOURCE_DIRECTORY(./ SRC_LIST1)
AUX_SOURCE_DIRECTORY(./socket SRC_LIST2)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/../base/pb/protocol SRC_LIST3)

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/../bin)
if(APPLE)
  SET(PB_LIB_DIR ${PROJECT_SOURCE_DIR}/../base/pb/lib/mac)
elseif(UNIX)
  SET(PB_LIB_DIR ${PROJECT_SOURCE_DIR}/../base/pb/lib/linux)
endif()

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)

INCLUDE_DIRECTORIES(./ ${PROJECT_SOURCE_DIR}/../base/pb/protocol ${PROJECT_SOURCE_DIR}/../base/pb ${PROJECT_SOURCE_DIR}/../base/slog)
LINK_DIRECTORIES(./ ${PB_LIB_DIR})

ADD_EXECUTABLE(push_server ${SRC_LIST1} ${SRC_LIST2} ${SRC_LIST3})

TARGET_LINK_LIBRARIES(push_server pthread protobuf-lite ssl)
