cmake_minimum_required(VERSION 2.6)
PROJECT(routeserver)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/../bin)
if(APPLE)
  SET(PB_LIB_DIR ${PROJECT_SOURCE_DIR}/../base/pb/lib/mac)
elseif(UNIX)
  SET(PB_LIB_DIR ${PROJECT_SOURCE_DIR}/../base/pb/lib/linux)
endif()

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)

INCLUDE_DIRECTORIES(./ ${PROJECT_SOURCE_DIR}/../base ${PROJECT_SOURCE_DIR}/../base/pb/protocol ${PROJECT_SOURCE_DIR}/../base/jsoncpp/ ${PROJECT_SOURCE_DIR}/../base/pb/)
LINK_DIRECTORIES(./ ${PROJECT_SOURCE_DIR}/../bin ${PB_LIB_DIR})

ADD_EXECUTABLE(route_server ${SRC_LIST})

TARGET_LINK_LIBRARIES(route_server base protobuf-lite pthread)
